@@ -46,9 +46,13 @@ limitations under the License.
 	<path id="project.class.path">
 		<path refid="junit.class.path" />
 		<path refid="stf.class.path" />
-		<path refid="asm.7.1.class.path" />
+		<path refid="asm.7.3.class.path" />
 		<path refid="tools.class.path" />
 	</path>
+	
+	<condition property="isJavas8" value="true">
+		<equals arg1="${java.specification.version}" arg2="1.8"/>
+	</condition>
 
 	<!-- Projects which need to be built before this one. -->
 	<!-- dir must be set on the ant task otherwise the basedir property is not set to a new value in the subant task. -->
@@ -91,7 +95,9 @@ limitations under the License.
 		</jar>
 	</target>
 
-	<target name="build-java" depends="check-prereqs, create-bin-dir">
+	<target name="build-java" depends="build-java-8, build-java-11-and-up" />
+		
+	<target name="build-java-8" if="${isJavas8}" depends="check-prereqs, create-bin-dir">
 		 <!--
 		 	The Ant javac task only checks time dependencies between .java files and their .class files,
 			so fails to recompile in situations such as the signatures of a dependent method changing.
@@ -113,6 +119,35 @@ limitations under the License.
 			   encoding="${src-encoding}"
 			   includeantruntime="false"
 			   failonerror="true">
+			<include name="**/*.java"/>
+		</javac>
+	</target>
+	
+	<target name="build-java-11-and-up" unless="${isJavas8}" depends="check-prereqs, create-bin-dir">
+		 <!--
+		 	The Ant javac task only checks time dependencies between .java files and their .class files,
+			so fails to recompile in situations such as the signatures of a dependent method changing.
+			The depend target checks the dependencies and deletes any .class files older than the files
+			which depend on them, thereby ensuring recompilation.
+		-->
+		<!--
+		Commented out because depend appears to be evaluating class files as always out of date with jdk11 (at 28/03/2019)
+		<depend srcdir="${openjdk_test_debugging_src_dir}" destdir="${openjdk_test_debugging_bin_dir}" classpathref="project.class.path">
+			<include name="**/*.java"/>
+		</depend>
+		-->
+		<javac srcdir="${openjdk_test_debugging_src_dir}"
+			   destdir="${openjdk_test_debugging_bin_dir}"
+			   fork="true"
+			   executable="${java_compiler}"
+			   debug="true"
+			   classpathref="project.class.path"
+			   encoding="${src-encoding}"
+			   includeantruntime="false"
+			   failonerror="true">
+			<compilerarg value="-source"/>
+			<compilerarg value="${java.specification.version}"/>
+			<compilerarg value="--enable-preview"/>
 			<include name="**/*.java"/>
 		</javac>
 	</target>
